--- a/css/style.css
+++ b/css/style.css
@@ -85,7 +85,7 @@
  .section-image {
  	/*background: #151515 url(https://images.unsplash.com/photo-1464822759023-fed622ff2c3b?dpr=2&auto=compress,format&crop=entropy&fit=crop&w=1199&h=799&q=80) no-repeat center center;
     */
-    background: #151515 url(coding1.jpg) no-repeat center;
+    background: #151515 url(images\coding1.jpg) no-repeat center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
@@ -252,7 +252,7 @@ section {
 #skills {
     /*background: #151515 url(https://images.unsplash.com/photo-1456983933114-c22026990f4b?dpr=2&auto=format&crop=entropy&fit=crop&w=1280&h=720&q=80) no-repeat center center;
     */
-    background: #151515 url(skills1.jpg) no-repeat center;
+    background: #151515 url(images\skills1.jpg) no-repeat center;
     height: auto;
 }
 
