--- a/css/style.css
+++ b/css/style.css
@@ -390,7 +390,7 @@ footer p {
     }
 
     #skills {
-        background: #151515 url(\images/try.jpg) no-repeat center center;
+        background: #151515 url(https://images.unsplash.com/photo-1456983933114-c22026990f4b?dpr=2&auto=format&crop=entropy&fit=crop&w=1280&h=720&q=80) no-repeat center center;
         background-position: top center;
 
     }
